--- a/src-gwt/org/opencms/ade/galleries/client/ui/css/imageEditorForm.css
+++ b/src-gwt/org/opencms/ade/galleries/client/ui/css/imageEditorForm.css
@@ -28,3 +28,7 @@ div.selectBox *{
 	font-size: value("constants.css.fontSizeSmall");
 	line-height: 12px;
 }
+
+div.selectBox .input-selectBoxOpener {
+	line-height: 28px; 
+}
